Update download links to use genius-site.com domain

--- a/index.html
+++ b/index.html
@@ -262,15 +262,13 @@
                                 button_type: 'main_download'
                             });
                         }
-                        // For Silicon Mac users (M1/M2/M3) - Ready for download link
-                        alert('Download for Silicon Mac (M1/M2/M3) - Link coming soon!');
-                        // TODO: Add Silicon Mac download link here
-                        // const link = document.createElement('a');
-                        // link.href = 'YOUR_SILICON_MAC_DOWNLOAD_LINK';
-                        // link.download = 'Genius-Silicon-Mac.dmg';
-                        // document.body.appendChild(link);
-                        // link.click();
-                        // document.body.removeChild(link);
+                        // For Silicon Mac users (M1/M2/M3) - Download from your domain
+                        const link = document.createElement('a');
+                        link.href = 'https://genius-site.com/downloads/Genius-1.0.0-arm64.dmg';
+                        link.download = 'Genius-1.0.0-arm64.dmg';
+                        document.body.appendChild(link);
+                        link.click();
+                        document.body.removeChild(link);
                     } else {
                         // Track Intel Mac download attempt
                         if (window.va) {
@@ -279,15 +277,13 @@
                                 button_type: 'main_download'
                             });
                         }
-                        // For Intel Mac users - Ready for download link
-                        alert('Download for Intel Mac - Link coming soon!');
-                        // TODO: Add Intel Mac download link here
-                        // const link = document.createElement('a');
-                        // link.href = 'YOUR_INTEL_MAC_DOWNLOAD_LINK';
-                        // link.download = 'Genius-Intel-Mac.dmg';
-                        // document.body.appendChild(link);
-                        // link.click();
-                        // document.body.removeChild(link);
+                        // For Intel Mac users - Download from your domain
+                        const link = document.createElement('a');
+                        link.href = 'https://genius-site.com/downloads/Genius-1.0.0.dmg';
+                        link.download = 'Genius-1.0.0.dmg';
+                        document.body.appendChild(link);
+                        link.click();
+                        document.body.removeChild(link);
                     }
                 } else {
                     // Track non-Mac download attempt
@@ -333,15 +329,13 @@
                                 button_type: 'header_download'
                             });
                         }
-                        // For Silicon Mac users (M1/M2/M3) - Ready for download link
-                        alert('Download for Silicon Mac (M1/M2/M3) - Link coming soon!');
-                        // TODO: Add Silicon Mac download link here
-                        // const link = document.createElement('a');
-                        // link.href = 'YOUR_SILICON_MAC_DOWNLOAD_LINK';
-                        // link.download = 'Genius-Silicon-Mac.dmg';
-                        // document.body.appendChild(link);
-                        // link.click();
-                        // document.body.removeChild(link);
+                        // For Silicon Mac users (M1/M2/M3) - Download from your domain
+                        const link = document.createElement('a');
+                        link.href = 'https://genius-site.com/downloads/Genius-1.0.0-arm64.dmg';
+                        link.download = 'Genius-1.0.0-arm64.dmg';
+                        document.body.appendChild(link);
+                        link.click();
+                        document.body.removeChild(link);
                     } else {
                         // Track Intel Mac download attempt
                         if (window.va) {
@@ -350,15 +344,13 @@
                                 button_type: 'header_download'
                             });
                         }
-                        // For Intel Mac users - Ready for download link
-                        alert('Download for Intel Mac - Link coming soon!');
-                        // TODO: Add Intel Mac download link here
-                        // const link = document.createElement('a');
-                        // link.href = 'YOUR_INTEL_MAC_DOWNLOAD_LINK';
-                        // link.download = 'Genius-Intel-Mac.dmg';
-                        // document.body.appendChild(link);
-                        // link.click();
-                        // document.body.removeChild(link);
+                        // For Intel Mac users - Download from your domain
+                        const link = document.createElement('a');
+                        link.href = 'https://genius-site.com/downloads/Genius-1.0.0.dmg';
+                        link.download = 'Genius-1.0.0.dmg';
+                        document.body.appendChild(link);
+                        link.click();
+                        document.body.removeChild(link);
                     }
                 } else {
                     // Track non-Mac download attempt
