Add real DMG files with Git LFS and update URLs for Vercel hosting

--- a/index.html
+++ b/index.html
@@ -262,9 +262,9 @@
                                 button_type: 'main_download'
                             });
                         }
-                        // For Silicon Mac users (M1/M2/M3) - Download from your domain
+                        // For Silicon Mac users (M1/M2/M3) - Download from Vercel
                         const link = document.createElement('a');
-                        link.href = 'https://genius-site.com/downloads/Genius-1.0.0-arm64.dmg';
+                        link.href = '/downloads/Genius-1.0.0-arm64.dmg';
                         link.download = 'Genius-1.0.0-arm64.dmg';
                         document.body.appendChild(link);
                         link.click();
@@ -277,9 +277,9 @@
                                 button_type: 'main_download'
                             });
                         }
-                        // For Intel Mac users - Download from your domain
+                        // For Intel Mac users - Download from Vercel
                         const link = document.createElement('a');
-                        link.href = 'https://genius-site.com/downloads/Genius-1.0.0.dmg';
+                        link.href = '/downloads/Genius-1.0.0.dmg';
                         link.download = 'Genius-1.0.0.dmg';
                         document.body.appendChild(link);
                         link.click();
@@ -329,9 +329,9 @@
                                 button_type: 'header_download'
                             });
                         }
-                        // For Silicon Mac users (M1/M2/M3) - Download from your domain
+                        // For Silicon Mac users (M1/M2/M3) - Download from Vercel
                         const link = document.createElement('a');
-                        link.href = 'https://genius-site.com/downloads/Genius-1.0.0-arm64.dmg';
+                        link.href = '/downloads/Genius-1.0.0-arm64.dmg';
                         link.download = 'Genius-1.0.0-arm64.dmg';
                         document.body.appendChild(link);
                         link.click();
@@ -344,9 +344,9 @@
                                 button_type: 'header_download'
                             });
                         }
-                        // For Intel Mac users - Download from your domain
+                        // For Intel Mac users - Download from Vercel
                         const link = document.createElement('a');
-                        link.href = 'https://genius-site.com/downloads/Genius-1.0.0.dmg';
+                        link.href = '/downloads/Genius-1.0.0.dmg';
                         link.download = 'Genius-1.0.0.dmg';
                         document.body.appendChild(link);
                         link.click();
