Add 'Founded by Moustapha' footer link with Instagram redirect

--- a/index.html
+++ b/index.html
@@ -200,7 +200,10 @@
         
         <footer class="footer">
             <p>&copy; 2025 Genius. All rights reserved.</p>
-            <a href="https://instagram.com/thegenius.app" target="_blank" class="footer-instagram">Insta: @thegenius.app</a>
+            <div class="footer-links">
+                <a href="https://instagram.com/thegenius.app" target="_blank" class="footer-instagram">Insta: @thegenius.app</a>
+                <a href="https://instagram.com/tafa.__" target="_blank" class="footer-founded">Founded by Moustapha</a>
+            </div>
         </footer>
     </div>
     
