--- a/index.html
+++ b/index.html
@@ -265,10 +265,10 @@
                                 button_type: 'main_download'
                             });
                         }
-                        // For Silicon Mac users (M1/M2/M3) - Download from Vercel
+                        // For Silicon Mac users (M1/M2/M3) - Download from GitHub Releases
                         const link = document.createElement('a');
-                        link.href = '/downloads/Genius-1.0.1-arm64-mac.zip';
-                        link.download = 'Genius-1.0.1-arm64-mac.zip';
+                        link.href = 'https://github.com/MousScales/genius-app/releases/download/v1.0.1/Genius-v1.0.1-Apple-Silicon-Mac.zip';
+                        link.download = 'Genius-v1.0.1-Apple-Silicon-Mac.zip';
                         document.body.appendChild(link);
                         link.click();
                         document.body.removeChild(link);
@@ -280,10 +280,10 @@
                                 button_type: 'main_download'
                             });
                         }
-                        // For Intel Mac users - Download from Vercel
+                        // For Intel Mac users - Download from GitHub Releases
                         const link = document.createElement('a');
-                        link.href = '/downloads/Genius-1.0.1-mac.zip';
-                        link.download = 'Genius-1.0.1-mac.zip';
+                        link.href = 'https://github.com/MousScales/genius-app/releases/download/v1.0.1/Genius-v1.0.1-Intel-Mac.zip';
+                        link.download = 'Genius-v1.0.1-Intel-Mac.zip';
                         document.body.appendChild(link);
                         link.click();
                         document.body.removeChild(link);
@@ -332,10 +332,10 @@
                                 button_type: 'header_download'
                             });
                         }
-                        // For Silicon Mac users (M1/M2/M3) - Download from Vercel
+                        // For Silicon Mac users (M1/M2/M3) - Download from GitHub Releases
                         const link = document.createElement('a');
-                        link.href = '/downloads/Genius-1.0.1-arm64-mac.zip';
-                        link.download = 'Genius-1.0.1-arm64-mac.zip';
+                        link.href = 'https://github.com/MousScales/genius-app/releases/download/v1.0.1/Genius-v1.0.1-Apple-Silicon-Mac.zip';
+                        link.download = 'Genius-v1.0.1-Apple-Silicon-Mac.zip';
                         document.body.appendChild(link);
                         link.click();
                         document.body.removeChild(link);
@@ -347,10 +347,10 @@
                                 button_type: 'header_download'
                             });
                         }
-                        // For Intel Mac users - Download from Vercel
+                        // For Intel Mac users - Download from GitHub Releases
                         const link = document.createElement('a');
-                        link.href = '/downloads/Genius-1.0.1-mac.zip';
-                        link.download = 'Genius-1.0.1-mac.zip';
+                        link.href = 'https://github.com/MousScales/genius-app/releases/download/v1.0.1/Genius-v1.0.1-Intel-Mac.zip';
+                        link.download = 'Genius-v1.0.1-Intel-Mac.zip';
                         document.body.appendChild(link);
                         link.click();
                         document.body.removeChild(link);
