Update download links to use correct GitHub release filenames

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                         }
                         // For Silicon Mac users (M1/M2/M3) - Download from GitHub Releases
                         const link = document.createElement('a');
-                        link.href = 'https://github.com/MousScales/genius-app/releases/download/v1.0.1/Genius-v1.0.1-Apple-Silicon-Mac.zip';
+                        link.href = 'https://github.com/MousScales/GeniusSite/releases/download/webapp/Genius-1.0.1-mac.zip';
                         link.download = 'Genius-v1.0.1-Apple-Silicon-Mac.zip';
                         document.body.appendChild(link);
                         link.click();
@@ -282,7 +282,7 @@
                         }
                         // For Intel Mac users - Download from GitHub Releases
                         const link = document.createElement('a');
-                        link.href = 'https://github.com/MousScales/genius-app/releases/download/v1.0.1/Genius-v1.0.1-Intel-Mac.zip';
+                        link.href = 'https://github.com/MousScales/GeniusSite/releases/download/webapp/Genius-1.0.1-mac.zip';
                         link.download = 'Genius-v1.0.1-Intel-Mac.zip';
                         document.body.appendChild(link);
                         link.click();
@@ -334,7 +334,7 @@
                         }
                         // For Silicon Mac users (M1/M2/M3) - Download from GitHub Releases
                         const link = document.createElement('a');
-                        link.href = 'https://github.com/MousScales/genius-app/releases/download/v1.0.1/Genius-v1.0.1-Apple-Silicon-Mac.zip';
+                        link.href = 'https://github.com/MousScales/GeniusSite/releases/download/webapp/Genius-1.0.1-mac.zip';
                         link.download = 'Genius-v1.0.1-Apple-Silicon-Mac.zip';
                         document.body.appendChild(link);
                         link.click();
@@ -349,7 +349,7 @@
                         }
                         // For Intel Mac users - Download from GitHub Releases
                         const link = document.createElement('a');
-                        link.href = 'https://github.com/MousScales/genius-app/releases/download/v1.0.1/Genius-v1.0.1-Intel-Mac.zip';
+                        link.href = 'https://github.com/MousScales/GeniusSite/releases/download/webapp/Genius-1.0.1-mac.zip';
                         link.download = 'Genius-v1.0.1-Intel-Mac.zip';
                         document.body.appendChild(link);
                         link.click();
