--- a/index.html
+++ b/index.html
@@ -13,14 +13,6 @@
         window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
     </script>
     <script defer src="https://va.vercel-scripts.com/v1/script.js"></script>
-    <script>
-        // Track page view for static site
-        window.addEventListener('load', function() {
-            if (window.va) {
-                window.va('track', 'page_view');
-            }
-        });
-    </script>
 </head>
 <body>
     <div class="container">
@@ -242,6 +234,16 @@
             // Start typewriter effect when page loads
             window.addEventListener('load', typeWriter);
             
+            // Track page view
+            window.addEventListener('load', function() {
+                if (window.va) {
+                    window.va('track', 'page_view', {
+                        page: 'home',
+                        title: 'Genius - AI Study Assistant'
+                    });
+                }
+            });
+            
             // Add click animation to download button
             document.getElementById('downloadBtn').addEventListener('click', function(e) {
                 e.preventDefault();
@@ -275,7 +277,7 @@
                         }
                         // For Silicon Mac users (M1/M2/M3) - Download from GitHub Releases
                         const link = document.createElement('a');
-                        link.href = 'https://github.com/MousScales/GeniusSite/releases/download/webapp/Genius-1.0.1-mac.zip';
+                        link.href = 'https://github.com/MousScales/genius-app/releases/download/2.0/Genius-1.0.1-arm64-mac.zip';
                         link.download = 'Genius-v1.0.1-Apple-Silicon-Mac.zip';
                         document.body.appendChild(link);
                         link.click();
@@ -290,7 +292,7 @@
                         }
                         // For Intel Mac users - Download from GitHub Releases
                         const link = document.createElement('a');
-                        link.href = 'https://github.com/MousScales/GeniusSite/releases/download/webapp/Genius-1.0.1-mac.zip';
+                        link.href = 'https://github.com/MousScales/genius-app/releases/download/2.0/Genius-1.0.1-arm64-mac.zip';
                         link.download = 'Genius-v1.0.1-Intel-Mac.zip';
                         document.body.appendChild(link);
                         link.click();
@@ -342,7 +344,7 @@
                         }
                         // For Silicon Mac users (M1/M2/M3) - Download from GitHub Releases
                         const link = document.createElement('a');
-                        link.href = 'https://github.com/MousScales/GeniusSite/releases/download/webapp/Genius-1.0.1-mac.zip';
+                        link.href = 'https://github.com/MousScales/genius-app/releases/download/2.0/Genius-1.0.1-arm64-mac.zip';
                         link.download = 'Genius-v1.0.1-Apple-Silicon-Mac.zip';
                         document.body.appendChild(link);
                         link.click();
@@ -357,7 +359,7 @@
                         }
                         // For Intel Mac users - Download from GitHub Releases
                         const link = document.createElement('a');
-                        link.href = 'https://github.com/MousScales/GeniusSite/releases/download/webapp/Genius-1.0.1-mac.zip';
+                        link.href = 'https://github.com/MousScales/genius-app/releases/download/2.0/Genius-1.0.1-arm64-mac.zip';
                         link.download = 'Genius-v1.0.1-Intel-Mac.zip';
                         document.body.appendChild(link);
                         link.click();
