--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                         }
                         // For Silicon Mac users (M1/M2/M3) - Download from GitHub Releases
                         const link = document.createElement('a');
-                        link.href = 'https://github.com/MousScales/genius-app/releases/download/2.0/Genius-1.0.1-arm64-mac.zip';
+                        link.href = 'https://github.com/MousScales/genius-app/releases/download/2.0/Genius-1.0.1-mac.zip';
                         link.download = 'Genius-v1.0.1-Apple-Silicon-Mac.zip';
                         document.body.appendChild(link);
                         link.click();
@@ -292,8 +292,8 @@
                         }
                         // For Intel Mac users - Download from GitHub Releases
                         const link = document.createElement('a');
-                        link.href = 'https://github.com/MousScales/genius-app/releases/download/2.0/Genius-1.0.1-arm64-mac.zip';
-                        link.download = 'Genius-v1.0.1-Intel-Mac.zip';
+                        link.href = 'https://github.com/MousScales/genius-app/releases/download/2.0/Genius-1.0.1-mac.zip';
+                        link.download = 'Genius-1.0.1-mac.zip';
                         document.body.appendChild(link);
                         link.click();
                         document.body.removeChild(link);
@@ -344,7 +344,7 @@
                         }
                         // For Silicon Mac users (M1/M2/M3) - Download from GitHub Releases
                         const link = document.createElement('a');
-                        link.href = 'https://github.com/MousScales/genius-app/releases/download/2.0/Genius-1.0.1-arm64-mac.zip';
+                        link.href = 'https://github.com/MousScales/genius-app/releases/download/2.0/Genius-1.0.1-mac.zip';
                         link.download = 'Genius-v1.0.1-Apple-Silicon-Mac.zip';
                         document.body.appendChild(link);
                         link.click();
@@ -359,8 +359,8 @@
                         }
                         // For Intel Mac users - Download from GitHub Releases
                         const link = document.createElement('a');
-                        link.href = 'https://github.com/MousScales/genius-app/releases/download/2.0/Genius-1.0.1-arm64-mac.zip';
-                        link.download = 'Genius-v1.0.1-Intel-Mac.zip';
+                        link.href = 'https://github.com/MousScales/genius-app/releases/download/2.0/Genius-1.0.1-mac.zip';
+                        link.download = 'Genius-1.0.1-mac.zip';
                         document.body.appendChild(link);
                         link.click();
                         document.body.removeChild(link);
