Fix download links to use local files instead of GitHub releases

--- a/index.html
+++ b/index.html
@@ -277,8 +277,8 @@
                         }
                         // For Silicon Mac users (M1/M2/M3) - Download from GitHub Releases
                         const link = document.createElement('a');
-                        link.href = 'https://github.com/MousScales/genius-app/releases/latest/download/Genius-1.0.1-mac.zip';
-                        link.download = 'Genius-v1.0.1-Apple-Silicon-Mac.zip';
+                        link.href = 'downloads/Genius-1.0.1-arm64-mac.zip';
+                        link.download = 'Genius-1.0.1-arm64-mac.zip';
                         document.body.appendChild(link);
                         link.click();
                         document.body.removeChild(link);
@@ -292,7 +292,7 @@
                         }
                         // For Intel Mac users - Download from GitHub Releases
                         const link = document.createElement('a');
-                        link.href = 'https://github.com/MousScales/genius-app/releases/latest/download/Genius-1.0.1-mac.zip';
+                        link.href = 'downloads/Genius-1.0.1-mac.zip';
                         link.download = 'Genius-1.0.1-mac.zip';
                         document.body.appendChild(link);
                         link.click();
@@ -344,8 +344,8 @@
                         }
                         // For Silicon Mac users (M1/M2/M3) - Download from GitHub Releases
                         const link = document.createElement('a');
-                        link.href = 'https://github.com/MousScales/genius-app/releases/latest/download/Genius-1.0.1-mac.zip';
-                        link.download = 'Genius-v1.0.1-Apple-Silicon-Mac.zip';
+                        link.href = 'downloads/Genius-1.0.1-arm64-mac.zip';
+                        link.download = 'Genius-1.0.1-arm64-mac.zip';
                         document.body.appendChild(link);
                         link.click();
                         document.body.removeChild(link);
@@ -359,7 +359,7 @@
                         }
                         // For Intel Mac users - Download from GitHub Releases
                         const link = document.createElement('a');
-                        link.href = 'https://github.com/MousScales/genius-app/releases/latest/download/Genius-1.0.1-mac.zip';
+                        link.href = 'downloads/Genius-1.0.1-mac.zip';
                         link.download = 'Genius-1.0.1-mac.zip';
                         document.body.appendChild(link);
                         link.click();
