Fix download links to point to correct GitHub repository and release

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                         }
                         // For Silicon Mac users (M1/M2/M3) - Download from GitHub Releases
                         const link = document.createElement('a');
-                        link.href = 'downloads/Genius-1.0.1-arm64-mac.zip';
+                        link.href = 'https://github.com/MousScales/GeniusSite/releases/download/genius/Genius-1.0.1-arm64-mac.zip';
                         link.download = 'Genius-1.0.1-arm64-mac.zip';
                         document.body.appendChild(link);
                         link.click();
@@ -292,7 +292,7 @@
                         }
                         // For Intel Mac users - Download from GitHub Releases
                         const link = document.createElement('a');
-                        link.href = 'downloads/Genius-1.0.1-mac.zip';
+                        link.href = 'https://github.com/MousScales/GeniusSite/releases/download/genius/Genius-1.0.1-mac.zip';
                         link.download = 'Genius-1.0.1-mac.zip';
                         document.body.appendChild(link);
                         link.click();
@@ -344,7 +344,7 @@
                         }
                         // For Silicon Mac users (M1/M2/M3) - Download from GitHub Releases
                         const link = document.createElement('a');
-                        link.href = 'downloads/Genius-1.0.1-arm64-mac.zip';
+                        link.href = 'https://github.com/MousScales/GeniusSite/releases/download/genius/Genius-1.0.1-arm64-mac.zip';
                         link.download = 'Genius-1.0.1-arm64-mac.zip';
                         document.body.appendChild(link);
                         link.click();
@@ -359,7 +359,7 @@
                         }
                         // For Intel Mac users - Download from GitHub Releases
                         const link = document.createElement('a');
-                        link.href = 'downloads/Genius-1.0.1-mac.zip';
+                        link.href = 'https://github.com/MousScales/GeniusSite/releases/download/genius/Genius-1.0.1-mac.zip';
                         link.download = 'Genius-1.0.1-mac.zip';
                         document.body.appendChild(link);
                         link.click();
